Vide Poster Change

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
           loop
           muted
           class="video-container"
-          poster="./images/aiman.jpeg"
+          poster="./images/profile.jpg"
         >
           <source src="./videos/jelly.mp4" type="video/mp4" />
           sorry your browser don't support embedded videos
