--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         loop
         muted
         class="video-container"
-        poster="./images/aiman.jpeg"
+        poster="./images/profile.jpg"
       >
         <source src="./videos/mauean.mp4" type="video/mp4" />
         sorry your browser don't support embedded videos
