Responsive about at smaller screen

--- a/about.html
+++ b/about.html
@@ -85,51 +85,51 @@
       </aside>
       <!-- end of sidebar  -->
 
-      <!-- about-header  -->
-      <header class="about-header">
-        <video
-          controls
-          autoplay
-          loop
-          muted
-          class="video-container"
-          poster="./images/profile.jpg"
-        >
-          <source src="./videos/jelly.mp4" type="video/mp4" />
-          sorry your browser don't support embedded videos
-        </video>
+      <video
+        controls
+        autoplay
+        loop
+        muted
+        class="video-container"
+        poster="./images/profile.jpg"
+      >
+        <source src="./videos/jelly.mp4" type="video/mp4" />
+        sorry your browser don't support embedded videos
+      </video>
 
-        <!-- Header  -->
-        <div class="about-banner">
-          <div class="section-center about-banner-center">
-            <div class="section-title">
-              <h2>About Me</h2>
-              <div class="underline"></div>
-            </div>
-            <div class="about-info">
-              <p>
-                I am a recent graduate from <a href="https://www.jmi.ac.in">Jamia Millia Islamia
-                University</a>, having earned a B.Tech in Civil Engineering in 2023.
-                Driven by a strong interest in technology, I have expanded my
-                expertise to include web development and data analysis.
-              </p>
-              <p>
-                In web development, I am proficient in MERN Stack Development. I have applied
-                this skill during my internship at <a href="https://www.simplifynote.com/">SimplifyNotes Pvt Ltd.</a>
-                Additionally, I possess advanced knowledge in data analysis,
-                including advanced Excel, MySQL, Python, and Power BI, which I
-                further developed during my internship at <a href="https://psyliq.com/">Psyliq</a>.</p>
+      <!-- Banner  -->
+      <div class="about-banner">
+        <div class="section-center about-banner-center">
+          <div class="section-title">
+            <h2>About Me</h2>
+            <div class="underline"></div>
+          </div>
+          <div class="about-info">
+            <p>
+              I am a recent graduate from
+              <a href="https://www.jmi.ac.in">Jamia Millia Islamia University</a
+              >, having earned a B.Tech in Civil Engineering in 2023. Driven by
+              a strong interest in technology, I have expanded my expertise to
+              include web development and data analysis.
+            </p>
+            <p>
+              In web development, I am proficient in MERN Stack Development. I
+              have applied this skill during my internship at
+              <a href="https://www.simplifynote.com/">SimplifyNotes Pvt Ltd.</a>
+              Additionally, I possess advanced knowledge in data analysis,
+              including advanced Excel, MySQL, Python, and Power BI, which I
+              further developed during my internship at
+              <a href="https://psyliq.com/">Psyliq</a>.
+            </p>
 
-              <p>
-                Thank you for considering my profile. I look forward to
-                potential opportunities where I can apply my expertise and
-                passion for technology.
-              </p>
-            </div>
+            <p>
+              Thank you for considering my profile. I look forward to potential
+              opportunities where I can apply my expertise and passion for
+              technology.
+            </p>
           </div>
         </div>
-      </header>
-      <!-- end of about-header  -->
+      </div>
 
       <!-- footer  -->
       <footer>
@@ -164,6 +164,7 @@
       </footer>
       <!-- end of footer  -->
     </section>
+
     <script src="./Js/app.js"></script>
   </body>
 </html>
